# docs/api_swagger.json
@@ -942,6 +942,14 @@
                 "summary": "User New",
                 "parameters": [
                     {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "Login Schema ",
                         "name": "login",
                         "in": "body",
@@ -960,6 +968,46 @@
                     }
                 }
             }
+        },
+        "/user_profile/{id}": {
+            "get": {
+                "description": "User New",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User Credential"
+                ],
+                "summary": "User New",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "USER ID OR USER Code",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/schema.User"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -972,6 +1020,150 @@
                 "valid": {
                     "description": "Valid is true if Time is not NULL",
                     "type": "boolean"
+                }
+            }
+        },
+        "schema.Account": {
+            "type": "object",
+            "properties": {
+                "application": {
+                    "$ref": "#/definitions/schema.Application"
+                },
+                "application_id": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "delete": {
+                    "type": "boolean"
+                },
+                "deletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "roleApplications": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schema.RoleApplication"
+                    }
+                },
+                "status": {
+                    "type": "boolean"
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "user_code": {
+                    "type": "string"
+                }
+            }
+        },
+        "schema.ActivityLog": {
+            "type": "object",
+            "properties": {
+                "application": {
+                    "type": "string"
+                },
+                "body": {
+                    "type": "string"
+                },
+                "client": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "duration": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "method": {
+                    "type": "string"
+                },
+                "path": {
+                    "type": "string"
+                },
+                "path_op": {
+                    "type": "string"
+                },
+                "referrer": {
+                    "type": "string"
+                },
+                "request_id": {
+                    "type": "string"
+                },
+                "source": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/schema.User"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "schema.Application": {
+            "type": "object",
+            "properties": {
+                "accounts": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schema.Account"
+                    }
+                },
+                "app_package": {
+                    "type": "string"
+                },
+                "app_package_class": {
+                    "type": "string"
+                },
+                "asset_apk": {
+                    "type": "string"
+                },
+                "asset_icon": {
+                    "type": "string"
+                },
+                "code": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "delete": {
+                    "type": "boolean"
+                },
+                "deletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "boolean"
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "updated_note": {
+                    "type": "string"
+                },
+                "version": {
+                    "type": "string"
                 }
             }
         },
@@ -1007,6 +1199,35 @@
                 }
             }
         },
+        "schema.Article": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "deletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "boolean"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
         "schema.Company": {
             "type": "object",
             "properties": {
@@ -1030,18 +1251,6 @@
                 },
                 "domain": {
                     "type": "string"
-                },
-                "employees": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/schema.Employee"
-                    }
-                },
-                "estates": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/schema.Estate"
-                    }
                 },
                 "fax": {
                     "type": "string"
@@ -1138,7 +1347,10 @@
                 "description": {
                     "type": "string"
                 },
-                "estate_id": {
+                "estate": {
+                    "$ref": "#/definitions/schema.Estate"
+                },
+                "estate_code": {
                     "type": "string"
                 },
                 "gangs": {
@@ -1205,7 +1417,7 @@
                 "company": {
                     "$ref": "#/definitions/schema.Company"
                 },
-                "company_id": {
+                "company_code": {
                     "type": "string"
                 },
                 "createdAt": {
@@ -1259,7 +1471,10 @@
                 "updatedAt": {
                     "type": "string"
                 },
-                "userId": {
+                "user": {
+                    "$ref": "#/definitions/schema.User"
+                },
+                "user_code": {
                     "type": "string"
                 },
                 "username": {
@@ -1276,7 +1491,7 @@
                 "company": {
                     "$ref": "#/definitions/schema.Company"
                 },
-                "company_id": {
+                "company_code": {
                     "type": "string"
                 },
                 "createdAt": {
@@ -1358,7 +1573,7 @@
                 "division": {
                     "$ref": "#/definitions/schema.Division"
                 },
-                "division_id": {
+                "division_code": {
                     "type": "string"
                 },
                 "id": {
@@ -1378,7 +1593,7 @@
                 "code": {
                     "type": "string"
                 },
-                "division_id": {
+                "division_code": {
                     "type": "string"
                 },
                 "id": {
@@ -1491,7 +1706,7 @@
                         "$ref": "#/definitions/schema.MetaRoleApp"
                     }
                 },
-                "userId": {
+                "userCode": {
                     "type": "string"
                 }
             }
@@ -1645,7 +1860,7 @@
                 "company": {
                     "$ref": "#/definitions/schema.MetaCompany"
                 },
-                "companyId": {
+                "companyCode": {
                     "type": "string"
                 },
                 "department": {
@@ -2004,7 +2219,7 @@
                 "description": {
                     "type": "string"
                 },
-                "estate_id": {
+                "estate_code": {
                     "type": "string"
                 },
                 "name": {
@@ -2031,7 +2246,7 @@
                 "description": {
                     "type": "string"
                 },
-                "estate_id": {
+                "estate_code": {
                     "type": "string"
                 },
                 "name": {
@@ -2046,7 +2261,7 @@
             "type": "object",
             "required": [
                 "code",
-                "company_id",
+                "company_code",
                 "description",
                 "name"
             ],
@@ -2054,7 +2269,7 @@
                 "code": {
                     "type": "string"
                 },
-                "company_id": {
+                "company_code": {
                     "type": "string"
                 },
                 "description": {
@@ -2069,7 +2284,7 @@
             "type": "object",
             "required": [
                 "code",
-                "company_id",
+                "company_code",
                 "delete",
                 "description",
                 "name",
@@ -2079,7 +2294,7 @@
                 "code": {
                     "type": "string"
                 },
-                "company_id": {
+                "company_code": {
                     "type": "string"
                 },
                 "delete": {
@@ -2100,14 +2315,14 @@
             "type": "object",
             "required": [
                 "code",
-                "division_id",
+                "division_code",
                 "name"
             ],
             "properties": {
                 "code": {
                     "type": "string"
                 },
-                "division_id": {
+                "division_code": {
                     "type": "string"
                 },
                 "name": {
@@ -2120,7 +2335,7 @@
             "required": [
                 "code",
                 "delete",
-                "division_id",
+                "division_code",
                 "name",
                 "status"
             ],
@@ -2131,7 +2346,7 @@
                 "delete": {
                     "type": "boolean"
                 },
-                "division_id": {
+                "division_code": {
                     "type": "string"
                 },
                 "name": {
@@ -2139,6 +2354,64 @@
                 },
                 "status": {
                     "type": "boolean"
+                }
+            }
+        },
+        "schema.Role": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "delete": {
+                    "type": "boolean"
+                },
+                "deletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "boolean"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "schema.RoleApplication": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "delete": {
+                    "type": "boolean"
+                },
+                "deletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "boolean"
+                },
+                "updatedAt": {
+                    "type": "string"
                 }
             }
         },
@@ -2162,6 +2435,74 @@
                     "items": {
                         "type": "string"
                     }
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "schema.User": {
+            "type": "object",
+            "properties": {
+                "accounts": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schema.Account"
+                    }
+                },
+                "activityLogs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schema.ActivityLog"
+                    }
+                },
+                "articles": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schema.Article"
+                    }
+                },
+                "code": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "delete": {
+                    "type": "boolean"
+                },
+                "deletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "divisions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schema.Division"
+                    }
+                },
+                "email": {
+                    "type": "string"
+                },
+                "employees": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schema.Employee"
+                    }
+                },
+                "id": {
+                    "type": "string"
+                },
+                "roles": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schema.Role"
+                    }
+                },
+                "status": {
+                    "type": "boolean"
+                },
+                "updatedAt": {
+                    "type": "string"
                 },
                 "username": {
                     "type": "string"
